tests/error/modifier_errors/flag_dagger_assign.err
Error: Assignment in dagger (at $FILE:7:4)
  | 
5 | @guppy(unitary_flags=UnitaryFlags.Dagger)
6 | def test() -> None:
7 |     x = 3
  |     ^^^^^ Assignment found in a dagger context

Guppy compilation failed due to 1 previous error
